# AutoGen_jimeng

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.test_cache/: main.html  test.html
prompts/: director.md  dp.md  host.md  parser.md  storyboard.md  writer.md
runs/: _user_config.json
runs/20260702_153748_427e/: fact_sheet.json  jimeng_prompt.md  state.json  transcript.md  writer_output.md
runs/20260702_164912_f620/: fact_sheet.json  jimeng_prompt.md  state.json  transcript.md  writer_output.md
runs/20260702_165220_1a2c/: fact_sheet.json  jimeng_prompt.md  state.json  transcript.md  user_input.json  writer_output.md
runs/20260702_205107_5aeb/: fact_sheet.json  jimeng_prompt.md  state.json  transcript.md  writer_output.md
runs/20260702_223623_32b6/: fact_sheet.json  prompts_index.json  state.json  transcript.md  user_input.json  writer_output.md
runs/20260702_232632_dc0e/: fact_sheet.json  prompts_index.json  state.json  transcript.md  user_input.json  writer_output.md
runs/20260703_141941_3444/: fact_sheet.json  jimeng_prompt.md  prompts_index.json  state.json  transcript.md  user_input.json  writer_output.md
runs/20260707_014135_edd0/: fact_sheet.json  jimeng_prompt.md  prompts_index.json  state.json  transcript.md  user_input.json  writer_output.md
src/: __init__.py  app.py  config.py  parser.py  session.py  user_input.py  validator.py  workflow.py
src/v1_legacy/: __init__.py  config.py  fact_sheet.py  orchestrator.py  parser.py  (+6 more)
static/: index.html  test.html
(+6 files in other folders)
