[project]
name = "autogen-jimeng-workflow"
version = "0.1.0"
description = "Multi-agent video script workflow using AutoGen → 即梦/豆包 video prompt"
requires-python = ">=3.10"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-ext[openai]>=0.7.5",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
